--- a/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
+++ b/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
@@ -5,27 +5,27 @@ test:
     type: local
     number: 2
   rounds:
-    - label: createAsset
-      description: Create asset benchmark
-      txDuration: 10
-      rateControl:
-        type: fixed-load
-        opts:
-          tps: 1500
-      workload:
-        module: workload/createAsset.js
-        arguments:
-          assets: 10
-          contractId: basic
-    # - label: readAsset
-    #   description: Read asset benchmark
-    #   txDuration: 30
+    # - label: createAsset
+    #   description: Create asset benchmark
+    #   txDuration: 10
     #   rateControl:
     #     type: fixed-load
     #     opts:
     #       tps: 1500
     #   workload:
-    #     module: workload/readAsset.js
+    #     module: workload/createAsset.js
     #     arguments:
-    #       assets: 40
+    #       assets: 10
     #       contractId: basic
+    - label: readAsset
+      description: Read asset benchmark
+      txDuration: 30
+      rateControl:
+        type: fixed-load
+        opts:
+          tps: 1500
+      workload:
+        module: workload/readAsset.js
+        arguments:
+          assets: 40
+          contractId: basic
