--- a/hyperledger/caliper/networks/networkConfig.yaml
+++ b/hyperledger/caliper/networks/networkConfig.yaml
@@ -22,4 +22,5 @@ organizations:
             # path: "/tmp/crypto/peerOrganizations/org1.example.com/users/User1@org1.example.com/msp/signcerts/cert.pem"
     connectionProfile:
       path: "/tmp/crypto/peerOrganizations/org1.example.com/connection-org1.yaml"
-    discover: true
+      # path: "/tmp/crypto/peerOrganizations/org1.example.com/connection-org1.yaml"
+      discover: true
