--- a/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
+++ b/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
@@ -6,16 +6,27 @@ test:
     number: 2
   rounds:
     # - label: verifyEmployee
-    #   description: Verify Employee benchmark
+    #   description: Test round for verifyEmployee
+    #   chaincodeId: basic # 여기에 체인코드의 실제 ID를 입력해야 합니다.
+    #   txNumber:
+    #     - 10
+    #   rateControl:
+    #     type: fixed-rate
+    #     opts:
+    #       tps: 1500 # TPS를 1500으로 설정
+    #   arguments:
+    #     id: emp1 # 'id'가 'VerifyEmployee' 함수에 전달되는 인수입니다.
+    #   callback:
+    #     module: workload/verifyEmployee.js
+    # - label: createEmployee
+    #   description: Create Employee benchmark
     #   txDuration: 30
     #   rateControl:
     #     type: fixed-load
     #     opts:
     #       tps: 1500
     #   workload:
-    #     module: workload/verifyEmployee.js
-    #     arguments:
-    #       timeout: 120
+    #     module: workload/createEmployee.js
     - label: readAsset
       description: Read asset benchmark
       txDuration: 30
