--- a/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
+++ b/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
@@ -16,27 +16,27 @@ test:
         module: workload/createEmployee.js
         arguments:
           contractId: basic
-    - label: readEmployee
-      description: Read employee benchmark
-      txDuration: 20
-      rateControl:
-        type: fixed-load
-        opts:
-          tps: 1500
-      workload:
-        module: workload/readEmployee.js
-        arguments:
-          employees: 30
-          contractId: basic
-    - label: verifyEmployee
-      description: Read employee benchmark
-      txDuration: 20
-      rateControl:
-        type: fixed-load
-        opts:
-          tps: 1500
-      workload:
-        module: workload/verifyEmployee.js
-        arguments:
-          employees: 30
-          contractId: basic
+    # - label: readEmployee
+    #   description: Read employee benchmark
+    #   txDuration: 20
+    #   rateControl:
+    #     type: fixed-load
+    #     opts:
+    #       tps: 1500
+    #   workload:
+    #     module: workload/readEmployee.js
+    #     arguments:
+    #       employees: 30
+    #       contractId: basic
+    # - label: verifyEmployee
+    #   description: Read employee benchmark
+    #   txDuration: 20
+    #   rateControl:
+    #     type: fixed-load
+    #     opts:
+    #       tps: 1500
+    #   workload:
+    #     module: workload/verifyEmployee.js
+    #     arguments:
+    #       employees: 30
+    #       contractId: basic
