--- a/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
+++ b/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
@@ -7,7 +7,7 @@ test:
   rounds:
     # - label: createEmployee
     #   description: Create Employee benchmark
-    #   txDuration: 100
+    #   txDuration: 20
     #   rateControl:
     #     type: fixed-load
     #     opts:
@@ -16,19 +16,7 @@ test:
     #     module: workload/createEmployee.js
     #     arguments:
     #       contractId: basic
-    - label: readEmployee
-      description: Read employee benchmark
-      txDuration: 20
-      rateControl:
-        type: fixed-load
-        opts:
-          tps: 1500
-      workload:
-        module: workload/readEmployee.js
-        arguments:
-          employees: 30
-          contractId: basic
-    # - label: verifyEmployee
+    # - label: readEmployee
     #   description: Read employee benchmark
     #   txDuration: 20
     #   rateControl:
@@ -36,7 +24,19 @@ test:
     #     opts:
     #       tps: 1500
     #   workload:
-    #     module: workload/verifyEmployee.js
+    #     module: workload/readEmployee.js
     #     arguments:
     #       employees: 30
     #       contractId: basic
+    - label: verifyEmployee
+      description: Read employee benchmark
+      txDuration: 20
+      rateControl:
+        type: fixed-load
+        opts:
+          tps: 1500
+      workload:
+        module: workload/verifyEmployee.js
+        arguments:
+          employees: 30
+          contractId: basic
