--- a/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
+++ b/hyperledger/caliper/benchmarks/myAssetBenchmark.yaml
@@ -5,29 +5,29 @@ test:
     type: local
     number: 8
   rounds:
-    # - label: createEmployee
-    #   description: Create Employee benchmark
-    #   txDuration: 20
-    #   rateControl:
-    #     type: fixed-load
-    #     opts:
-    #       tps: 1
-    #   workload:
-    #     module: workload/createEmployee.js
-    #     arguments:
-    #       contractId: basic
-    # - label: readEmployee
-    #   description: Read employee benchmark
-    #   txDuration: 20
-    #   rateControl:
-    #     type: fixed-load
-    #     opts:
-    #       tps: 1500
-    #   workload:
-    #     module: workload/readEmployee.js
-    #     arguments:
-    #       employees: 30
-    #       contractId: basic
+    - label: createEmployee
+      description: Create Employee benchmark
+      txDuration: 20
+      rateControl:
+        type: fixed-load
+        opts:
+          tps: 1
+      workload:
+        module: workload/createEmployee.js
+        arguments:
+          contractId: basic
+    - label: readEmployee
+      description: Read employee benchmark
+      txDuration: 20
+      rateControl:
+        type: fixed-load
+        opts:
+          tps: 1500
+      workload:
+        module: workload/readEmployee.js
+        arguments:
+          employees: 30
+          contractId: basic
     - label: verifyEmployee
       description: Read employee benchmark
       txDuration: 20
